# WebServ

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  Server.hpp  Syntax_conf.ebnf  YoupiBanane.conf  compose.yml  config.ebnf  default.conf  example.conf  index.html  index.html.8  php-py.supp  progress_bar.sh  run_test.sh  run_tests.sh  style.css  test.txt  users.db  webserv  webserv.conf  website.conf
.github/workflows/: clang-tidy.yml  compile.yml  unit-test.yml
OLD_www/: 404.html  style.css
conf/: Syntax_conf.ebnf  basic.conf  default.conf  double_port.conf  my.conf  website.conf
css/: style.css
default_page/css/: style.css
default_page/html/: error400.html  error403.html  error404.html  error405.html  error500.html
github/workflows/: compile.yml
html/: delete.html  index.html
includes/: Client.hpp  Config.hpp  Handler.hpp  Location.hpp  Logger.hpp  Parser.hpp  Parser_utils.tpp  Requestutils.tpp  Server.hpp  Signal.hpp  ToString.tpp  WebServ.hpp  color.hpp  finder.hpp
includes/cgi/: CGI.hpp  CGIHandler.hpp
includes/client/: Builder.hpp  Client.hpp  Client_Parser.hpp  Parser.hpp  Parser_utils.tpp
includes/error/: IError.hpp  IException.hpp
includes/lexer/: Lexer.hpp  Token.hpp  old_Token.hpp
includes/parser/: Action.hpp  IConfig.hpp  IParserToken.hpp  Lexer.hpp  Location.hpp  Param.hpp  Parser.hpp  Statement.hpp  Token.hpp
includes/server/: Handler.hpp  Server.hpp  ServerException.hpp  ServerHost.hpp  Signal.hpp  VirtualServer.hpp  old_Server.hpp
includes/template/: Cast.tpp  MapDeepCopy.tpp  StringUtils.tpp  VectorDeepCopy.tpp  vector_deep_copy.tpp
new_www/cgi/: account.php  delete_account.php  login.php  sign_in.php
new_www/css/: chillax.css  documentation.css  sign-in.css  style.css
new_www/database/: users.db
new_www/html/: account.html  account_management.html  documentation.html  index.html  login.html  login_success.html  sign_in.html  sign_in_success.html  tic_tac_toe.html  user_log_error.html
new_www/icons/: user_test.png:Zone.Identifier
new_www/js/: ConfigLang.js  send_delete_request.js
sources/: Client.cpp  ClientParsing.cpp  Client_Tables.cpp  Handler.cpp  Logger.cpp  Parser.cpp  Parser_Url.cpp  Parser_url.cpp  Server.cpp  Signal.cpp  WebServ.cpp  finder.cpp  main.cpp
sources/Webserv/: WebServ.cpp
sources/cgi/: CGIHandler.cpp  executeCGI.cpp  init_cgi.cpp  verifCGIResponse.cpp
sources/client/: Builder.cpp  Client.cpp  ClientCGI.cpp  Client_Tables.cpp  Delete_request.cpp  Parser.cpp  Parser_uri.cpp  Parser_url.cpp  Post_request.cpp  autoindex.cpp  finderConfigParam.cpp
sources/lexer/: Lexer.cpp  LexerException.cpp  Token.cpp  regex.cpp
sources/parser/: Action.cpp  ActionException.cpp  Lexer.cpp  LexerException.cpp  Location.cpp  Param.cpp  Parser.cpp  ParserException.cpp  ParserMethode.cpp  ReduceRule.cpp  Statement.cpp  Token.cpp  tokenize.cpp
sources/server/: Handler.cpp  Server.cpp  ServerException.cpp  ServerHost.cpp  Signal.cpp  VirtualServer.cpp  old_Server.cpp
sources/tokenizer/: tokenize.cpp
tests/: CMakeLists.txt  Test.cpp  gtest_installer.sh  server_test.py  website.conf
tests/gtest/: Makefile  all_run.sh
tests/gtest/conf/: identify_token.conf  identify_token_one_line.conf  identify_token_tab.conf
tests/gtest/conf/lexer/: identify_token.conf  identify_token_one_line.conf  identify_token_tab+space.conf  identify_token_tab.conf
tests/gtest/conf/parser/: wrong_param.conf  wrong_server.conf  wrong_server_hostname.conf  wrong_server_listen.conf
tests/gtest/lexer/: IdentidyToken.cpp  LexerOpenConf.cpp  RegexTest.cpp  TokenTest.cpp
tests/gtest/parser/: IdentidyToken.cpp  LexerOpenConf.cpp  LexerTest.cpp  ReduceTest.cpp  RegexTest.cpp
tests/gtest/statement/: TestToken.cpp
tests/gtest/tokenize/: TestLink.conf  testNormal.conf
tests/parser/: TestParser.cpp
tests/python/: request_body.py  request_return_code.py  run_all_tests_python.sh  run_classic_server.sh  server_test.py  test.sh
tests/python/components/: index.py  script.php  script_broken.php
tests/python/conf/: classic.conf  test_website.conf
tests/python/www_test/cgi-bin/: test.php  test.py  test_wrong_header.py
tests/python/www_test/html/: TestGet.html  TestPost.html  error_page404.html  error_page500.html
tests/statement/: TestToken.cpp
tests/tokenize/: TestTokenize.cpp  test2.conf  test3.conf  testDQuote.conf  testNormal.conf  testOneLine.conf  testSQuote.conf
www/: index.html
www/CGI/: Test.py
www/OLD_www/: index.html
www/cgi/: calculatrice.py  register.php  register.py  test.py  upload.py
www/cgi-bin/: account.php  broken.py  delete_account.php  index.php  infinit.py  login.php  sign_in.php  upload.php  upload.py
www/css/: chillax.css  documentation.css  style.css  tic_tac_toe.css
www/database/: users.db
www/html/: 404.html  account.html  account_management.html  calculatrice.html  delete.html  documentation.html  download.html  index.html  login.html  register.html  sign_in.html  sign_in_success.html  test_autoindex.html  tic_tac_toe.html  upload.html  user_log_error.html
(+20 files in other folders)
