enable_testing()

# add_executable(TokenizeTest tokenize/TestTokenize.cpp
# 							../sources/lexer/LexerException.cpp
# 							../sources/lexer/Lexer.cpp
# 							../sources/lexer/Token.cpp)

# target_link_libraries(TokenizeTest gtest gtest_main)

# add_test(NAME Tokenize_Test COMMAND ./TokenizeTest)